# music-mosaic

./: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1731652203781-6a586e6fa51e7.mjs
.github/workflows/: release.yml
src/: App.vue  Main.vue  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: compression.rs  filesystem.rs  http.rs  main.rs  tray.rs
src/assets/: style.css
src/common/: constant.ts  default-config.ts  default-shortcut.ts  file-util.ts  is.ts  normalize-util.ts  store.ts
src/components/: AnimatedDiv.vue  BottomLoadingState.vue  CommonMusicListDetail.vue  CommonMusicSheet.vue  CustomDataTable.vue  Empty.vue  FixedDataTable.vue  ImportMusicSheetModal.vue  Loading.vue  LoadingOrEmpty.vue  LyricView.vue  MusicDownloaded.vue  MusicFavorite.vue  MusicList.vue  MusicSheetSelectionDialog.vue  MusicSheetView.vue  PlaylistDrawer.vue  PluginListModal.vue  SvgAsset.vue  Tag.vue
src/components/AlbumDataView/: index.vue
src/components/AppHeader/: index.vue
src/components/AppSideBar/: CreatePlaylistModal.vue  MusicSheetModal.vue  SidebarItem.vue  index.vue
src/components/MainContent/: index.vue
src/db/: music-sheet-db.ts
src/downloader/: downloaded-sheet.ts  index.ts
src/hooks/: useMusicSourcePlugin.ts  useRecentPlayed.ts  useThemes.ts
src/plugins/: primevue.ts
src/router/: index.ts
src/store/: musicSheetStore.ts  playerStore.ts  playlistStore.ts  pluginStore.ts  settingsStore.ts  uiStore.ts
src/types/: config.d.ts  plugin.d.ts
src/utils/: fileUtils.ts  indexedDBStorage.ts  pluginValidator.ts  user-perference.ts
src/webworkers/: downloader.ts
(+41 files in other folders)
